Fix visual bug of cancelled bar displaying behind checkbox input

--- a/src/styles.css
+++ b/src/styles.css
@@ -484,6 +484,7 @@ div.cancel {
     position: absolute;
     background-color: black;
     display: none;
+    z-index: 1;
 }
 
 .todo.display.wrapper {
